# fast-api

./: README.md  config.py  pyproject.toml
app/: config.py  database.py  main.py
app/bookings/: models.py  router.py  schemas.py  services.py
app/customers/: models.py
app/hotels/: models.py
app/migrations/: env.py
app/migrations/versions/: 1142710cb828_create_db.py  41480df66df8_complete_base_first_ver.py  7e742a44e980_initial_migration.py  bded70068f15_complete_base_first_ver.py  f47b3ee5aab7_update_version.py
app/rooms/: models.py
app/service/: base.py
app/users/: auth.py  dependencies.py  models.py  router.py  schemas.py  services.py
